@@ -18,13 +18,11 @@ using namespace std;
 
 #include <ImageLoader.h>
 
+#include "location.h"
 
 /**
  *
- * An effect STUB that uses a compiled blender still/animation as a template.
- * It reads from a working directory that needs to be configured -
- * the default is to look for a "picmix" subdirectory.  Note, this is 
- * a STUB, it has not yet been implemented.
+ * An effect that uses a compiled still/animation as a template.
  *
  */
 class PicmixEffect : public Effect {
@@ -33,8 +31,11 @@ public:
     frame = -1;
     readDir = "";
     readVersion = "0";
-    options.put("dir","picmix");
-    options.put("version",0);
+    readOverlay = "";
+    options.put("overlay",
+		(getResourceLocation()+"/"+"example.png").c_str());
+    //options.put("dir","picmix");
+    //options.put("version",0);
     needRead = false;
     reconfigure(options);
   }
@@ -53,6 +54,9 @@ public:
     if (options.check("version")) {
       workVersion = options.check("version",Value("")).toString().c_str();
     }
+    if (options.check("overlay")) {
+      workOverlay = options.check("overlay",Value("")).toString().c_str();
+    }
     needRead = true;
     return true;
   }
@@ -67,6 +71,7 @@ private:
   int frame;
   string workDir, readDir;
   string workVersion, readVersion;
+  string workOverlay, readOverlay;
   Property options;
   Property effectConfig;
   ImageLoader img;
@@ -110,6 +115,15 @@ bool PicmixEffect::draw(ImageOf<PixelRgb>& src2, ImageOf<PixelRgb>& dest2) {
 }
 
 void PicmixEffect::readEffectData() {
+  if (workOverlay!="") {
+    if (workOverlay!=readOverlay) {
+      img.load(workOverlay.c_str());
+      printf("overlay size %dx%d\n", img.width(), img.height());
+      readOverlay = workOverlay;
+    }
+    return;
+  }
+
   if (workDir==readDir&&workVersion==readVersion) {
     printf("Reading pixmix effect data from dir [%s] (version [%s])\n",
 	   workDir.c_str(),
